Sat Sep  2 14:24:57 2000  David Byers  <davby@sen2.ida.liu.se>

	* slow.el (lyskom-expand-slow-command): Use
 	lyskom-slow-list-completions to sort possible completions.
	(lyskom-slow-list-completions): New function.
	(kom-slow-list-completions): Use lyskom-slow-list-completions.

	* compatibility.el (char-before): New compatibility definition.

2000-09-02  David Byers  <davby@sen2.ida.liu.se>

	* utilities.el (lyskom-maybe-frob-completion-table): Add third
	argument to lyskom-recode-string.

	* lyskom-buttons.el (lyskom-make-button-menu): Add third argument
	to lyskom-recode-string.

2000-09-01  David Byers  <davby@sen2.ida.liu.se>

	* slow.el (kom-slow-click-or-yank): Fixed typo.

	* Release of 0.46-BETA-W

2000-09-01  David Byers  <davby@ida.liu.se>

	
	Selective checking of commented author's membership:
	* edit-text.el (lyskom-edit-send-check-recipients): Use
	kom-dont-check-commented-authors. 

	* vars.el.in (kom-dont-check-commented-authors): New variable.

	Better command completion:
	* command.el (lyskom-complete-command): Fix. We didn't handle
	check for exact match properly. Fix unibyte incompatibility.
	(lyskom-read-extended-command): Use lyskom-complete-command.
	(lyskom-ok-command): Work the elements from
	lyskom-command-alternatives.

	* vars.el.in (lyskom-command-alternatives): Made a minibuffer
	variable.
	(lyskom-is-administrator): Same here.

	* command.el (lyskom-ok-command): Rewrote to work with new
	completion thingy.

	Buttons and menus in slow mode:
	* slow.el (kom-expand-slow-command-or-next-link): New command.
	(kom-slow-click-or-yank): New command.
	(kom-slow-button-press): New command.
	(kom-slow-menu-button-press): New command.
	(kom-expand-slow-command-or-next-link): New command.
	(lyskom-slow-on-prompt-line): New function.

2000-08-31  David Byers  <davby@ida.liu.se>

	* slow.el (kom-slow-start-of-line): Do the right thing when not on
	the last line of the buffer.

2000-08-31  Ulrik Haugen  <qha@lysator.liu.se>
