@@ -1,3 +1,14 @@
+2000-09-02  David Byers  <davby@sen2.ida.liu.se>
+
+	* completing-read.el (lyskom-completing-strip-name): Added
+	DONT-STRIP-SPACES argument.
+
+2000-09-02  David Byers  <davby@ida.liu.se>
+
+	* distribution-Makefile (INFODIR): Changed to default location for
+	Emacs installations.
+	(LISPDIR): Same here.
+
 Sat Sep  2 14:24:57 2000  David Byers  <davby@sen2.ida.liu.se>
 
 	* slow.el (lyskom-expand-slow-command): Use
